Update and rename html/index.html to index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div class="accueil-historique">
-            <img src="../images/logo_but.png" alt="logo BUT" title="logo BUT">
+            <img src="images/logo_but.png" alt="logo BUT" title="logo BUT">
             <div class="accueil-historique-texte">
                 <h1>Historique du BUT</h1>
                 <p>Le bachelor universitaire de technologie (BUT) est une licence professionnelle, et un diplôme national de 
