--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Page d'Accueil</title>
-        <link rel="stylesheet" href="../css/style.css">
-        <link rel = "icon" href="../images/logo1.png" type="images/x-icon">
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel = "icon" href="./images/logo1.png" type="images/x-icon">
         <meta name ="Description" content="Page d'accueil pour IUT">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
@@ -12,8 +12,8 @@
     <body>
         <div class="accueil-header"> 
             <div class="accueil-header1">
-                <img src="../images/logo1.png" alt="logo iut occitanie université toulouse III" title="logo iut occitanie université toulouse III">
-                <img src="../images/logo2.jpg" alt="logo université toulouse III Paul Sabatier" title="logo université toulouse III Paul Sabatier">
+                <img src="./images/logo1.png" alt="logo iut occitanie université toulouse III" title="logo iut occitanie université toulouse III">
+                <img src="./images/logo2.jpg" alt="logo université toulouse III Paul Sabatier" title="logo université toulouse III Paul Sabatier">
             </div>
             <div class="accueil-header2">
                 <img class="img3" src="../images/logo3.jpg" alt="logo iut occitanie université toulouse III toulouse" title="logo iut occitanie université toulouse III toulouse">
@@ -52,7 +52,7 @@
         </div>
         <hr>
         <div class="accueil-iutinfo">
-            <a href="https://iut-informatique.univ-tlse3.fr/"><img src="../images/IUT.jpg" alt="logo iut informatique universite toulouse 3" title="logo iut informatique universite toulouse 3"></a>
+            <a href="https://iut-informatique.univ-tlse3.fr/"><img src="./images/IUT.jpg" alt="logo iut informatique universite toulouse 3" title="logo iut informatique universite toulouse 3"></a>
             <div class="accueil-iutinfo-texte">
                 <h1>IUT Informatique Toulouse Rangueil</h1>
                 <p>Créé en 1967, le département Informatique accueille chaque année 168 étudiants en première année du BUT. 
@@ -78,11 +78,11 @@
                     31077 TOULOUSE cedex 4, FRANCE</p>
             </div>
             <div class="accueil-email">
-                <img src="../images/logo_email.png" alt="logo email" title="logo email iut informatique">
+                <img src="./images/logo_email.png" alt="logo email" title="logo email iut informatique">
                 <p>Email : info.contact@iut-tlse3.fr</p>
             </div>
             <div class="accueil-telephone">
-                <img src="../images/logo_telephone.png" alt="logo téléphone" title="logo telephone iut informatique">
+                <img src="./images/logo_telephone.png" alt="logo téléphone" title="logo telephone iut informatique">
                 <p>Tel : 05 62 25 87 61</p>
             </div>
         </div>
@@ -104,7 +104,7 @@
             <div class="accueil-comp2">
                 <a href="competence2.html" class="accueil-comp2-btn">OPTIMISER DES APPLICATIONS INFORMATIQUES</a>
                 <div class="accueil-comp2-texte">
-                    <img src="../images/comp_2.png" alt = "logo competence 2 Optimiser des applications" title="logo competence 2 Optimiser des applications">
+                    <img src="./images/comp_2.png" alt = "logo competence 2 Optimiser des applications" title="logo competence 2 Optimiser des applications">
                     <ul>
                         <li>S1.02 Comparaison d'approches algoithmiques</li>
                         <li>R1.01 Initiation au développement</li>
@@ -118,7 +118,7 @@
             <div class="accueil-comp3">
                 <a href="competence3.html" class="accueil-comp3-btn">ADMINISTRER DES SYSTEMES INFORMATIQUES COMMUNICANTS COMPLEXES</a>
                 <div class="accueil-comp3-texte">
-                    <img src="../images/comp_3.png" alt = "logo competence 3 Administrer des systèmes informatiques comminicants complexes" title="logo competence 3 Administrer des systèmes informatiques comminicants complexes">
+                    <img src="./images/comp_3.png" alt = "logo competence 3 Administrer des systèmes informatiques comminicants complexes" title="logo competence 3 Administrer des systèmes informatiques comminicants complexes">
                     <ul>
                         <li>S1.03 Installation d'un poste pour le développement</li>
                         <li>R1.03 Introduction à l'architecture des ordinateurs</li>
@@ -131,7 +131,7 @@
             <div class="accueil-comp4">
                 <a href="competence4.html" class="accueil-comp4-btn" >GERER DES DONNEES DE L'INFORMATION</a>
                 <div class="accueil-comp4-texte">
-                    <img src="../images/comp_4.png" alt = "logo competence 4 Gérer des données de l'information" title="logo competence 4 Gérer des données de l'information">
+                    <img src="./images/comp_4.png" alt = "logo competence 4 Gérer des données de l'information" title="logo competence 4 Gérer des données de l'information">
                     <ul>
                         <li>S1.04 Création d'une base de données</li>
                         <li>R1.05 Introduction aux bases de données et SQL</li>
@@ -143,7 +143,7 @@
             <div class="accueil-comp5">
                 <a href="competence5.html" class="accueil-comp5-btn">CONDUIRE UN PROJET</a>
                 <div class="accueil-comp5-texte">
-                    <img src="../images/comp_5.png" alt = "logo competence 5 Conduire un projet" title="logo competence 5 Conduire un projet">
+                    <img src="./images/comp_5.png" alt = "logo competence 5 Conduire un projet" title="logo competence 5 Conduire un projet">
                     <ul>
                         <li>S1.05 Recueil de besoins</li>
                         <li>R1.02 Développement d'interfaces web</li>
@@ -218,7 +218,7 @@
                 <a href="competence6.html">Travailler dans une équipe informatique</a>
                 <a href="contact.html">Contacts</a>
             </div>
-            <a class="cnil" href="https://www.cnil.fr/fr/reglement-europeen-protection-donnees"><img src="../images/logo_cnil.png" alt="logo cnil"></a>
+            <a class="cnil" href="https://www.cnil.fr/fr/reglement-europeen-protection-donnees"><img src="./images/logo_cnil.png" alt="logo cnil"></a>
             <div class="accueil-noms">
                 <h1>TEAMTECH APP</h1>
                 <p>Angel ENRIQUEZ</p>
