--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
                 <img src="./images/logo2.jpg" alt="logo université toulouse III Paul Sabatier" title="logo université toulouse III Paul Sabatier">
             </div>
             <div class="accueil-header2">
-                <img class="img3" src="../images/logo3.jpg" alt="logo iut occitanie université toulouse III toulouse" title="logo iut occitanie université toulouse III toulouse">
+                <img class="img3" src="./images/logo3.jpg" alt="logo iut occitanie université toulouse III toulouse" title="logo iut occitanie université toulouse III toulouse">
             </div>
         </div>
         <div class="accueil">
             <input type="checkbox" class="accueil-options-btn" id="toggleNav" >
-            <label for="toggleNav"><img src="../images/logo_option.png" alt="logo pour indiquer options"></label> 
+            <label for="toggleNav"><img src="./images/logo_option.png" alt="logo pour indiquer options"></label> 
             <div class="accueil-navbar">
                 <a href="accueil.html">Accueil</a>
                 <a href="presentation.html">Présentation de BUT</a>
                 <div class="accueil-dropdown">
                     <button class="accueil-dropbtn">Compétences</button>
                     <div class = "accueil-dropdown-content">
-                        <a href="competence1.html">Réaliser un développement d'application</a>
-                        <a href="competence2.html">Optimiser des applications</a>
-                        <a href="competence3.html">Administrer des systèmes informatiques comminicants complexes</a>
-                        <a href="competence4.html">Gérer des données de l'information</a>
-                        <a href="competence5.html">Conduire un projet</a>
-                        <a href="competence6.html">Collaborer au sein d'une équipe informatique</a>
+                        <a href="./html/competence1.html">Réaliser un développement d'application</a>
+                        <a href="./html/competence2.html">Optimiser des applications</a>
+                        <a href="./html/competence3.html">Administrer des systèmes informatiques comminicants complexes</a>
+                        <a href="./html/competence4.html">Gérer des données de l'information</a>
+                        <a href="./html/competence5.html">Conduire un projet</a>
+                        <a href="./html/competence6.html">Collaborer au sein d'une équipe informatique</a>
                     </div>
                 </div>
                 <a href="contact.html">Contact</a>
@@ -68,7 +68,7 @@
             <h1>Nous contacter</h1>
             <div class="accueil-adresse">
                 <div class="accueil-adresse-titre">
-                    <img src="../images/logo_adresse.png" alt="logo adresse" title="logo adresse iut informatique">
+                    <img src="./images/logo_adresse.png" alt="logo adresse" title="logo adresse iut informatique">
                     <p>Adresse:</p>
                 </div>
                 <p class="accueil-adresse-texte">
@@ -90,9 +90,9 @@
         <h1 class="accueil-h1">Liste des compétences</h1>
         <div class="accueil-comp">
             <div class="accueil-comp1">
-                <a href="competence1.html" class="accueil-comp1-btn">REALISER UN DEVELOPPEMENT D'APPLICATION</a>
+                <a href="./html/competence1.html" class="accueil-comp1-btn">REALISER UN DEVELOPPEMENT D'APPLICATION</a>
                 <div class="accueil-comp1-texte">
-                    <img src="../images/comp_1.png" alt = "logo competence 1 realiser un developpement d'application" title="logo competence 1 realiser un developpement d'application">
+                    <img src="./images/comp_1.png" alt = "logo competence 1 realiser un developpement d'application" title="logo competence 1 realiser un developpement d'application">
                     <ul>
                         <li>S1.01 Implémentation d'un besoin client</li>
                         <li>R1.01 Initiation au développement</li>
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="accueil-comp2">
-                <a href="competence2.html" class="accueil-comp2-btn">OPTIMISER DES APPLICATIONS INFORMATIQUES</a>
+                <a href="./html/competence2.html" class="accueil-comp2-btn">OPTIMISER DES APPLICATIONS INFORMATIQUES</a>
                 <div class="accueil-comp2-texte">
                     <img src="./images/comp_2.png" alt = "logo competence 2 Optimiser des applications" title="logo competence 2 Optimiser des applications">
                     <ul>
@@ -116,7 +116,7 @@
                 </div>
             </div>
             <div class="accueil-comp3">
-                <a href="competence3.html" class="accueil-comp3-btn">ADMINISTRER DES SYSTEMES INFORMATIQUES COMMUNICANTS COMPLEXES</a>
+                <a href="./html/competence3.html" class="accueil-comp3-btn">ADMINISTRER DES SYSTEMES INFORMATIQUES COMMUNICANTS COMPLEXES</a>
                 <div class="accueil-comp3-texte">
                     <img src="./images/comp_3.png" alt = "logo competence 3 Administrer des systèmes informatiques comminicants complexes" title="logo competence 3 Administrer des systèmes informatiques comminicants complexes">
                     <ul>
@@ -129,7 +129,7 @@
                 </div>
             </div>
             <div class="accueil-comp4">
-                <a href="competence4.html" class="accueil-comp4-btn" >GERER DES DONNEES DE L'INFORMATION</a>
+                <a href="./html/competence4.html" class="accueil-comp4-btn" >GERER DES DONNEES DE L'INFORMATION</a>
                 <div class="accueil-comp4-texte">
                     <img src="./images/comp_4.png" alt = "logo competence 4 Gérer des données de l'information" title="logo competence 4 Gérer des données de l'information">
                     <ul>
@@ -141,7 +141,7 @@
                 </div>
             </div>
             <div class="accueil-comp5">
-                <a href="competence5.html" class="accueil-comp5-btn">CONDUIRE UN PROJET</a>
+                <a href="./html/competence5.html" class="accueil-comp5-btn">CONDUIRE UN PROJET</a>
                 <div class="accueil-comp5-texte">
                     <img src="./images/comp_5.png" alt = "logo competence 5 Conduire un projet" title="logo competence 5 Conduire un projet">
                     <ul>
@@ -153,9 +153,9 @@
                 </div>
             </div>
             <div class="accueil-comp6">
-                <a href="competence6.html" class="accueil-comp6-btn">TRAVAILLER DANS UNE EQUIPE INFORMATIQUE</a>
+                <a href="./html/competence6.html" class="accueil-comp6-btn">TRAVAILLER DANS UNE EQUIPE INFORMATIQUE</a>
                 <div class="accueil-comp6-texte">
-                    <img src="../images/comp_6.png" alt = "logo competence 6 Collaborer au sein d'une équipe informatique" title="logo competence 6 Collaborer au sein d'une équipe informatique">
+                    <img src="./images/comp_6.png" alt = "logo competence 6 Collaborer au sein d'une équipe informatique" title="logo competence 6 Collaborer au sein d'une équipe informatique">
                     <ul>
                         <li>S1.06 Découverte de l'environnement économique et écologique</li>
                         <li>R1.02 Développement d'interfaces web</li>
@@ -208,15 +208,15 @@
         </div>
         <footer>
             <div class="accueil-footer-content">
-                <a href="accueil.html">Accueil</a>
-                <a href="presentation.html">Présentation du BUT</a>
-                <a href="competence1.html">Réaliser un developpement d'application</a>
-                <a href="competence2.html">Optimiser des applications informatiques</a>
-                <a href="competence3.html">Administrer des systèmes informatiques communicants complexes</a>
-                <a href="competence4.html">Gérer des données des l'information</a>
-                <a href="competence5.html">Conduire un projet</a>
-                <a href="competence6.html">Travailler dans une équipe informatique</a>
-                <a href="contact.html">Contacts</a>
+                <a href="index.html">Accueil</a>
+                <a href="/html/presentation.html">Présentation du BUT</a>
+                <a href="/html/competence1.html">Réaliser un developpement d'application</a>
+                <a href="/html/competence2.html">Optimiser des applications informatiques</a>
+                <a href="/html/competence3.html">Administrer des systèmes informatiques communicants complexes</a>
+                <a href="/html/competence4.html">Gérer des données des l'information</a>
+                <a href="/html/competence5.html">Conduire un projet</a>
+                <a href="/html/competence6.html">Travailler dans une équipe informatique</a>
+                <a href="/html/contact.html">Contacts</a>
             </div>
             <a class="cnil" href="https://www.cnil.fr/fr/reglement-europeen-protection-donnees"><img src="./images/logo_cnil.png" alt="logo cnil"></a>
             <div class="accueil-noms">
