--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                 <div class="accueil-dropdown">
                     <button class="accueil-dropbtn">Compétences</button>
                     <div class = "accueil-dropdown-content">
-                        <a href="./html/competence1.html">Réaliser un développement d'application</a>
-                        <a href="./html/competence2.html">Optimiser des applications</a>
-                        <a href="./html/competence3.html">Administrer des systèmes informatiques comminicants complexes</a>
-                        <a href="./html/competence4.html">Gérer des données de l'information</a>
-                        <a href="./html/competence5.html">Conduire un projet</a>
-                        <a href="./html/competence6.html">Collaborer au sein d'une équipe informatique</a>
+                        <a href="/html/competence1.html">Réaliser un développement d'application</a>
+                        <a href="/html/competence2.html">Optimiser des applications</a>
+                        <a href="/html/competence3.html">Administrer des systèmes informatiques comminicants complexes</a>
+                        <a href="/html/competence4.html">Gérer des données de l'information</a>
+                        <a href="/html/competence5.html">Conduire un projet</a>
+                        <a href="/html/competence6.html">Collaborer au sein d'une équipe informatique</a>
                     </div>
                 </div>
                 <a href="contact.html">Contact</a>
