--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Page d'Accueil</title>
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="MiniProjetR102/css/style.css">
         <link rel = "icon" href="./images/logo1.png" type="images/x-icon">
         <meta name ="Description" content="Page d'accueil pour IUT">
         <meta name="viewport" content="width=device-width, initial-scale=1">
