--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Page d'Accueil</title>
-        <link rel="stylesheet" href="MiniProjetR102/css/style.css">
+        <link rel="stylesheet" href="./css/style.css">
         <link rel = "icon" href="./images/logo1.png" type="images/x-icon">
         <meta name ="Description" content="Page d'accueil pour IUT">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,19 +28,19 @@
                 <div class="accueil-dropdown">
                     <button class="accueil-dropbtn">Compétences</button>
                     <div class = "accueil-dropdown-content">
-                        <a href="/html/competence1.html">Réaliser un développement d'application</a>
-                        <a href="/html/competence2.html">Optimiser des applications</a>
-                        <a href="/html/competence3.html">Administrer des systèmes informatiques comminicants complexes</a>
-                        <a href="/html/competence4.html">Gérer des données de l'information</a>
-                        <a href="/html/competence5.html">Conduire un projet</a>
-                        <a href="/html/competence6.html">Collaborer au sein d'une équipe informatique</a>
+                        <a href="./html/competence1.html">Réaliser un développement d'application</a>
+                        <a href="./html/competence2.html">Optimiser des applications</a>
+                        <a href="./html/competence3.html">Administrer des systèmes informatiques comminicants complexes</a>
+                        <a href="./html/competence4.html">Gérer des données de l'information</a>
+                        <a href="./html/competence5.html">Conduire un projet</a>
+                        <a href="./html/competence6.html">Collaborer au sein d'une équipe informatique</a>
                     </div>
                 </div>
                 <a href="contact.html">Contact</a>
             </div>
         </div>
         <div class="accueil-historique">
-            <img src="images/logo_but.png" alt="logo BUT" title="logo BUT">
+            <img src="./images/logo_but.png" alt="logo BUT" title="logo BUT">
             <div class="accueil-historique-texte">
                 <h1>Historique du BUT</h1>
                 <p>Le bachelor universitaire de technologie (BUT) est une licence professionnelle, et un diplôme national de 
@@ -180,7 +180,7 @@
                     étudiante donne accès à l'ensemble du réseau de restauration du CROUS, offrant ainsi une flexibilité 
                     accrue pour choisir parmi une variété d'options de repas dans d'autres endroits en fonction 
                     des préférences individuelles.</p>
-                <a href="https://iut-informatique.univ-tlse3.fr/restauration-hebergement"><img src="../images/resto.png" alt="image du restaurant universitaire" title="image du restaurant universitaire iut informatique toulouse III"></a>
+                <a href="https://iut-informatique.univ-tlse3.fr/restauration-hebergement"><img src="./images/resto.png" alt="image du restaurant universitaire" title="image du restaurant universitaire iut informatique toulouse III"></a>
             </div>
             <div class="accueil-sport">
                 <p>Le pôle sport garantit la implementation de la politique sportive de l'université à travers diverses initiatives. 
@@ -192,7 +192,7 @@
                 de haut niveau et études supérieures. Il prend en charge l'accueil des étudiants en situation de handicap (ESH) et la gestion
                 des installations sportives. En outre, le pôle s'engage activement au sein de l'Association sportive, participant aux compétitions 
                 FFSU, aux activités de plein air, ainsi qu'aux événements sportifs.</p>
-                <a href="https://www.univ-tlse3.fr/campus/sport"><img src="../images/sport.png" alt="image des activité sportives" title="image des activité sportives iut informatique toulouse III"></a>
+                <a href="https://www.univ-tlse3.fr/campus/sport"><img src="./images/sport.png" alt="image des activité sportives" title="image des activité sportives iut informatique toulouse III"></a>
             </div>
             <div class="accueil-cril">
                 <p>Le Centre de Langues est un lieu dans lequel l'apprenant a à sa disposition des outils variés, aussi bien multimédias 
@@ -203,20 +203,20 @@
                      étudiants et locuteurs natifs, où le plaisir d'échanger et de progresser ensemble prime. L'anglais, l'espagnol, l'allemand, l
                      'italien, et le français langue étrangère sont actuellement les langues retenues pour l'apprentissage, les échanges et 
                      la documentation disponible dans cet espace.</p>
-                     <a href="https://iut-informatique.univ-tlse3.fr/centre-de-langues"><img src="../images/cril.png" alt="image du cril" title="image du cril iut informatique toulouse III"></a>
+                     <a href="https://iut-informatique.univ-tlse3.fr/centre-de-langues"><img src="./images/cril.png" alt="image du cril" title="image du cril iut informatique toulouse III"></a>
             </div>
         </div>
         <footer>
             <div class="accueil-footer-content">
                 <a href="index.html">Accueil</a>
-                <a href="/html/presentation.html">Présentation du BUT</a>
-                <a href="/html/competence1.html">Réaliser un developpement d'application</a>
-                <a href="/html/competence2.html">Optimiser des applications informatiques</a>
-                <a href="/html/competence3.html">Administrer des systèmes informatiques communicants complexes</a>
-                <a href="/html/competence4.html">Gérer des données des l'information</a>
-                <a href="/html/competence5.html">Conduire un projet</a>
-                <a href="/html/competence6.html">Travailler dans une équipe informatique</a>
-                <a href="/html/contact.html">Contacts</a>
+                <a href="./html/presentation.html">Présentation du BUT</a>
+                <a href="./html/competence1.html">Réaliser un developpement d'application</a>
+                <a href="./html/competence2.html">Optimiser des applications informatiques</a>
+                <a href="./html/competence3.html">Administrer des systèmes informatiques communicants complexes</a>
+                <a href="./html/competence4.html">Gérer des données des l'information</a>
+                <a href="./html/competence5.html">Conduire un projet</a>
+                <a href="./html/competence6.html">Travailler dans une équipe informatique</a>
+                <a href="./html/contact.html">Contacts</a>
             </div>
             <a class="cnil" href="https://www.cnil.fr/fr/reglement-europeen-protection-donnees"><img src="./images/logo_cnil.png" alt="logo cnil"></a>
             <div class="accueil-noms">
